# anubis-notary

./: .coderabbit.yaml  .gitignore  .lia.cache  ARCHITECTURE.md  CLAUDE.md  COMPREHENSIVE_CODE_REVIEW.md  CONTRIBUTING.md  Cargo.toml  FORMAL.md  HANDOFF.md  LICENSE  Makefile  README.md  SECURITY.md  SECURITY_AUDIT_REQUEST.md  SIDE_CHANNEL_ANALYSIS.md  STATUS.md  THREATMODEL.md  VERIFICATION.md
.cargo/: config.toml
.github/workflows/: ci.yml  fuzz.yml  release.yml  verify.yml
benches/: crypto_timing.rs  ct_timing.rs
crates/anubis_cli/: Cargo.toml
crates/anubis_cli/src/: main.rs
crates/anubis_cli/tests/: integration_tests.rs  workflow_tests.rs
crates/anubis_core/: Cargo.toml  FORMAL.md
crates/anubis_core/benches/: crypto_bench.rs
crates/anubis_core/fuzz/: Cargo.toml
crates/anubis_core/fuzz/fuzz_targets/: fuzz_aead.rs  fuzz_cbor.rs  fuzz_keccak.rs  fuzz_license.rs  fuzz_merkle.rs  fuzz_receipt.rs
crates/anubis_core/src/: error.rs  lib.rs
crates/anubis_core/src/aead/: mod.rs
crates/anubis_core/src/audit/: mod.rs
crates/anubis_core/src/bytes/: mod.rs
crates/anubis_core/src/cbor/: ciborium_wrapper.rs  mod.rs
crates/anubis_core/src/ct/: mod.rs
crates/anubis_core/src/fault/: mod.rs
crates/anubis_core/src/hsm/: mod.rs
crates/anubis_core/src/kdf/: mod.rs
crates/anubis_core/src/keccak/: mod.rs  sha3.rs  shake.rs
crates/anubis_core/src/license/: mod.rs
crates/anubis_core/src/marriage/: mod.rs
crates/anubis_core/src/merkle/: mod.rs
crates/anubis_core/src/mldsa/: mod.rs
crates/anubis_core/src/mlkem/: mod.rs
crates/anubis_core/src/multisig/: mod.rs
crates/anubis_core/src/nonce/: mod.rs
crates/anubis_core/src/private_batch/: batch.rs  collaborative.rs  encrypted_leaf.rs  error.rs  key_envelope.rs  mod.rs
crates/anubis_core/src/receipt/: mod.rs
crates/anubis_core/src/recovery/: mod.rs
crates/anubis_core/src/streaming/: mod.rs
crates/anubis_core/tests/: nist_kat_tests.rs  property_tests.rs
crates/anubis_io/: Cargo.toml
crates/anubis_io/src/: anchor.rs  batch_queue.rs  lib.rs  mina.rs  mina_graphql.rs  neo.rs  rate_limit.rs  seal.rs  starknet.rs  ztarknet.rs
docker/: Dockerfile  Makefile.proofs  run-proofs.sh
docs/: ARCHITECTURE.md  DEPLOYMENT.md  MAINNET.md  MULTISIG.md  STARKNET.md  TROUBLESHOOTING.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_aead.rs  fuzz_cbor.rs  fuzz_keccak.rs  fuzz_license.rs  fuzz_mldsa.rs  fuzz_receipt.rs
mina-bridge/: README.md  mina-bridge.js  package-lock.json  package.json  tsconfig.json
mina-bridge/src/: AnubisAnchor.ts  AnubisBatchVault.ts  index.ts
mina-zkapp/: package-lock.json  package.json  tsconfig.json
mina-zkapp/scripts/: deploy.ts  interact.ts
mina-zkapp/src/: AnubisAnchor.ts  index.ts  mina-bridge.js
proofs/: .lia.cache  Makefile  dune  dune-project
proofs/_build/: .db  .digest-db  log
proofs/_build/default/: .anubis_proofs.theory.d  .lia.cache
proofs/_build/default/.dune/: configurator  configurator.v2
proofs/refinements/: crypto_refinements.v
proofs/theories/: .memory_safety_fixes.aux  .memory_tier_spec.aux  .tier_test.aux  aead_spec.v  argon2_spec.v  cbor_spec.v  crypto_model.v  memory_safety_fixes.glob  memory_safety_fixes.v  memory_safety_fixes.vo  memory_tier_spec.glob  memory_tier_spec.v  memory_tier_spec.vo  merkle_spec.v  mldsa_spec.v  security_games.v  tier_test.glob  tier_test.vo  xdg_spec.v
proofs/verified/: .bytes_verified.aux  .ct_verified.aux  .fault_verified.aux  .lia.cache  .nonce_verified.aux  .test_ct.aux  bytes_verified.glob  bytes_verified.v  bytes_verified.vo  ct_verified.glob  ct_verified.v  ct_verified.vo  fault_verified.glob  fault_verified.v  fault_verified.vo  nonce_verified.glob  nonce_verified.v  nonce_verified.vo  test_ct.glob  test_ct.v  test_ct.vo
scripts/: clean-build-artifacts.sh  run_proofs.sh
specs/coq/: anubis_notary.v  arithmetic_proofs.v  complete_verification.v  cryptographic_axioms.v  master_proofs.v
specs/refinedrust/: .lia.cache  Makefile  README.md  VERIFICATION_STRATEGY.md  anubis_models.ml  anubis_models.mli  anubis_oracles.mli  anubis_validators.ml  anubis_validators.mli  dune-project  rocqworkers.toml
specs/refinedrust/_build/: .db  .digest-db  log
specs/refinedrust/annotations/: aead_annotations.rs  anchor_annotations.rs  bytes_annotations.rs  cbor_annotations.rs  complete_crypto_annotations.rs  ct_annotations.rs  fuzz_annotations.rs  io_annotations.rs  kdf_annotations.rs  keccak_annotations.rs  license_annotations.rs  memory_safety_annotations.rs  merkle_annotations.rs  mldsa_annotations.rs  mlkem_annotations.rs  nice_to_have_annotations.rs  nonce_annotations.rs  receipt_annotations.rs
specs/refinedrust/proofs/: proof_obligations.v
specs/refinedrust/theories/: .ct_bridge.aux  .nonce_spec.aux  aead_spec.v  all_proofs.v  anubis_oracles.ml  bytes_spec.v  cbor_pure.v  cbor_spec.v  ct_bridge.v  ct_spec.v  dune  extraction.v  fault_spec.v  hsm_spec.v  hsm_spec_security.v  kdf_spec.v  keccak_model.v  keccak_spec.v  license_spec.v  merkle_bridge.v  merkle_spec.v  mldsa_spec.v  mlkem_spec.v  multisig_spec.v  nonce_spec.v  receipt_spec.v  sha3_spec.v  shake_spec.v  streaming_spec.v  timing_model.v  val_conversions.v
starknet-bridge/: package-lock.json  package.json  starknet-bridge.js
starknet-contract/: Scarb.toml
starknet-contract/scripts/: run_tests.sh
starknet-contract/src/: lib.cairo  marriage.cairo  marriage_ring.cairo  privacy_oracle.cairo
starknet-contract/tests/: test_batch_anchoring.cairo  test_merkle_proofs.cairo  test_security.cairo
templates/marriage/: README.md  comprehensive.json  monogamy.json  polygamy.json  prenup.json  simple.json
tests/: integration_test.rs
verified/: Cargo.toml  RefinedRust.toml
verified/output/anubis_verified/: interface.rrlib
verified/output/anubis_verified/proofs/: dune  proof_add_one.v  proof_ct_eq.v  proof_ct_select.v  proof_is_left_child.v  proof_merkle_left_child.v  proof_merkle_parent.v  proof_merkle_right_child.v  proof_merkle_sibling.v  proof_nonce_index.v  proof_signatures_needed.v  proof_valid_threshold.v
verified/src/: main.rs
(+48 files in other folders)
