# Anubis Notary - RefinedRust-verified post-quantum CLI notary

[workspace]
resolver = "2"
members = [
    "crates/anubis_core",
    "crates/anubis_io",
    "crates/anubis_cli",
]
exclude = ["verified"]

[workspace.package]
version = "0.4.1"
edition = "2021"
authors = ["Anubis Notary Contributors"]
license = "Apache-2.0 OR MIT"
rust-version = "1.75"
repository = "https://github.com/AnubisQuantumCipher/anubis-notary"
homepage = "https://github.com/AnubisQuantumCipher/anubis-notary"
documentation = "https://github.com/AnubisQuantumCipher/anubis-notary/tree/main/docs"
description = "Post-quantum secure notary CLI with formal proofs and blockchain anchoring"
keywords = ["cryptography", "post-quantum", "notary", "starknet", "mina"]
categories = ["cryptography", "command-line-utilities"]

[workspace.dependencies]
subtle = "2"
zeroize = { version = "1", default-features = false, features = ["derive"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
hex = "0.4"
criterion = "0.5"

# Root package for benchmarks
[package]
name = "anubis-notary"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anubis_core = { path = "crates/anubis_core" }

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3"
getrandom = "0.2"
anubis_io = { path = "crates/anubis_io" }

[[bench]]
name = "ct_timing"
harness = false

[[bench]]
name = "crypto_timing"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.bench]
inherits = "release"
lto = "off"          # avoid LLVM LTO crash with ML-DSA codegen
codegen-units = 16   # faster compiles for benches
debug = true         # keep symbols for perf analysis

[profile.dev]
overflow-checks = true
