[package]
name = "anubis_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI for Anubis Notary"

[[bin]]
name = "anubis-notary"
path = "src/main.rs"

[dependencies]
anubis_core = { path = "../anubis_core" }
anubis_io = { path = "../anubis_io" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
getrandom = "0.2"
# Secure password input (no echo)
rpassword = "7"
# Zeroization of password buffers
zeroize = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
serde_json = { workspace = true }
