[package]
name = "anubis_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI for Anubis Notary"

[[bin]]
name = "anubis-notary"
path = "src/main.rs"

[dependencies]
anubis_core = { path = "../anubis_core", features = ["std"] }
anubis_io = { path = "../anubis_io" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
getrandom = "0.2"
# Secure password input (no echo)
rpassword = "7"
# Zeroization of password buffers
zeroize = { workspace = true }
# Platform-specific home directory (for Mina bridge setup)
dirs = "5"
# Starknet crypto for keygen (same versions as anubis_io)
starknet-core = "0.16"
starknet-crypto = "0.8"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
serde_json = { workspace = true }
