(coq.theory
(flags -w -notation-overridden -w -redundant-canonical-projection)
(name refinedrust.examples.anubis_verified.proofs)
(modules proof_merkle_parent proof_merkle_left_child proof_merkle_right_child proof_add_one)
(theories stdpp iris Ltac2 Equations lrust caesium lithium refinedrust Stdlib refinedrust.examples.anubis_verified.generated))
